--- a/github.io/example_file/problem_example.html
+++ b/github.io/example_file/problem_example.html
@@ -3,8 +3,18 @@
   </head>
 
   <body>
+    問題のexample:
+    
     <b><h1>37</h1></b>
 
     A君は30km/hでA地点からB地点に向かっています。 ABまでの距離は120kmです。 B地点に着くまで何時間かかるでしょうか。
+
+    回答のexample:
+
+    <b><h1>37</h1></b>
+
+    120kmを30km/hで動いているので120kmを動き切るのには
+    120÷30=4(h)かかる。
+    よって答えは 4時間
   </body>
 </html>
