--- a/github.io/example_file/problem_example.html
+++ b/github.io/example_file/problem_example.html
@@ -7,7 +7,7 @@
     
     <b><h1>37</h1></b>
 
-    A君は30km/hでA地点からB地点に向かっています。 ABまでの距離は120kmです。 B地点に着くまで何時間かかるでしょうか。
+    A君は30km/hでA地点からB地点に向かっています。 ABまでの距離は120kmです。 B地点に着くまで何時間かかるでしょうか。n\
 
     回答のexample:
 
