--- a/github.io/example_file/problem_example.html
+++ b/github.io/example_file/problem_example.html
@@ -8,12 +8,12 @@
     <b><h1>37</h1></b>
 
     A君は30km/hでA地点からB地点に向かっています。 ABまでの距離は120kmです。 B地点に着くまで何時間かかるでしょうか。
-    <br><br>回答のexample:
+    <br><br><br><br><br><br><br><br><br><br>回答のexample:
 
-    <b><h1>37</h1></b>
+    <br><b><h1>37</h1></b>
 
-    120kmを30km/hで動いているので120kmを動き切るのには
-    120÷30=4(h)かかる。
+    120kmを30km/hで動いているので120kmを動き切るのには<br>
+    120÷30=4(h)かかる。<br>
     よって答えは 4時間
   </body>
 </html>
